# ai-thinker-esp32-cam

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_WIKI.md  CONTRIBUTING.md  LICENSE  README.md  README.zh.md  partitions.csv  sdkconfig.defaults
.github/workflows/: release.yml
docs/en/: api.md  architecture.md  capabilities.md  esp32-cam-performance.md  getting-started.md  hardware.md  lens-and-fov.md  performance.md  troubleshooting.md  user-guide.md
docs/zh/: api.md  architecture.md  capabilities.md  esp32-cam-performance.md  getting-started.md  hardware.md  lens-and-fov.md  performance.md  troubleshooting.md  user-guide.md
main/: CMakeLists.txt  Kconfig.projbuild  camera_driver.c  camera_driver.h  common.h  config_manager.c  config_manager.h  flash_led.c  flash_led.h  frame_broadcaster.c  frame_broadcaster.h  frame_broker.c  frame_broker.h  ftp_client.c  ftp_client.h  health_monitor.c  health_monitor.h  idf_component.yml  main.c  mjpeg_streamer.c  mjpeg_streamer.h  motion_detect.c  motion_detect.h  nas_uploader.c  nas_uploader.h  onvif_discovery.c  onvif_discovery.h  onvif_service.c  onvif_service.h  ota_update.c  ota_update.h  sd_logger.c  sd_logger.h  serial_config.c  serial_config.h  sha256.c  sha256.h  status_led.c  status_led.h  storage_manager.c  (+17 more)
main/web_ui/: config.html  files.html  index.html  preview.html  setup.html  update.html
